overhaul projects, resume, etc

--- a/styles/blueboard.css
+++ b/styles/blueboard.css
@@ -1,15 +1,18 @@
-#link-box2 {
-    background-color: #AEC5A5;
-    border-radius: 35px;
-    height: 50px;
-    padding: 10px 30px;
-    width: 300px; 
-}
-
-.website {
+.box-title {
     color: var(--project-text-color);
     font-family: var(--acorn-font);
-    text-align: center;
+    font-size: 2.1875rem;
+    text-align: left;
+}
+
+.description {
+    padding-left: 0;
+}
+
+.link-box {
+    border-radius: 35px;
+    padding: 20px 30px;
+    width: 300px; 
 }
 
 .link-boxes {
@@ -18,44 +21,6 @@
     gap: 30px; 
     justify-content: center;
     margin-top: 30px;
-  }
-  
-.link-box {
-    border-radius: 35px;
-    padding: 20px 30px;
-    width: 300px; 
-}
-
-.box-title {
-    color: var(--project-text-color);
-    font-family: var(--acorn-font);
-    font-size: 2.1875rem;
-    text-align: left;
-}
-
-h1 a {
-    font-family: var(--acorn-font);
-}
-
-.description li {
-    color: var(--project-text-color);
-    font-size: 1.125rem;
-    line-height: 1.6;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: left;
-}
-
-.description a {
-    color: var(--project-text-color);
-    font-size: 1.125rem;
-    font-weight: bold;
-}
-
-.website a {
-    color: var(--project-text-color);
-    font-family: var(--acorn-font);
-    font-size: 1.25rem;
 }
 
 .login-image img {
@@ -64,33 +29,58 @@ h1 a {
     margin: var(--rhythm) auto;
 }
 
+.login-image {
+    display: flex;
+    justify-content: center;
+}
+
+.website {
+    color: var(--project-text-color);
+    font-family: var(--acorn-font);
+    padding-top: 1rem;
+    text-align: center;
+}
+
+#link-box2 {
+    background-color: #AEC5A5;
+    border-radius: 35px;
+    height: 50px;
+    padding: 10px 30px;
+    width: 300px; 
+}
+
+.description a {
+    color: var(--project-text-color);
+    font-size: 1.125rem;
+    font-weight: bold;
+}
+
 .description a:hover {
     color: #e7d2bc;
 }
 
-.description ul {
-    padding-left: 0;
-
-    li {
-        /* animation: fadeInUp 0.8s forwards; */
-        color: var(--project-text-color);
-        line-height: 1.6;
-        margin-bottom: 20px;
-        margin-top: 20px;
-        /* opacity: 0;
-        transition:
-          transform 0.3s ease,
-          opacity 0.3s ease;   
-        transform: translateY(-20px); */
-    }
+.description li {
+    color: var(--project-text-color);
+    font-size: 1.125rem;
+    line-height: 1.6;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-align: left;
 }
 
-.website a:hover {
-    color: #578b83;
+.description ul li {
+    color: var(--project-text-color);
+    line-height: 1.6;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .description ul li strong {
     color: var(--project-text-color);
+}
+
+h1 a {
+    font-family: var(--acorn-font);
 }
 
 .link-box:first-of-type {
@@ -105,15 +95,25 @@ h1 a {
     background-color: #C78476;
 }
 
+.website a {
+    color: var(--project-text-color);
+    font-family: var(--acorn-font);
+    font-size: 1.25rem;
+}
+
+.website a:hover {
+    color: #578b83;
+}
+
 @media screen and (min-width: 650px) {
     li {
-      font-size: 1.125rem;
+        font-size: 1.125rem;
     }
 }
 
 @media screen and (min-width: 750px) {
     .link-box:first-of-type {
-        height: 550px;
+        height: 600px;
     }
 }
 
@@ -125,12 +125,16 @@ h1 a {
 
 @media screen and (min-width: 1280px) {
     li {
-      font-size: 1.5rem;
+        font-size: 1.5rem;
+    }
+    .link-box:first-of-type {
+        height: 600px;
     }
 }
 
 @media screen and (min-width: 1293px) {
     .link-box:nth-of-type(3) {
-        height: 350px;
+        height: 380px;
     }
 }
+
