--- a/styles/style.css
+++ b/styles/style.css
@@ -1,155 +1,56 @@
 @font-face {
+    font-display: swap;
     font-family: Acorn;
     src: url("../fonts/acorn-medium.ttf");
 }
   
 @font-face {
+    font-display: swap;
     font-family: Montserrat;
     src: url("../fonts/montserrat.ttf");
 }
   
 @keyframes fadeInUp {
     to {
-      opacity: 1;
-      transform: translateY(0);
+        opacity: 1;
+        transform: translateY(0);
     }
 }
   
 :root {
+    --acorn-font: 'Acorn', sans-serif;
+    --background-image: url("../images/light-mode.JPEG"); 
+    --lighter-text-color: rgb(16, 90, 78, .8);
+    --menu-background-color: rgb(16, 90, 78);
+    --menu-text-color: #e7d2cb;
+    --montserrat-font: 'Montserrat', sans-serif;
+    --nav-background-hover: rgba(16, 90, 78, .3);
+    --nav-height: 48px;
+    --nav-text-hover: white;
+    --project-text-color: #354542;
+    --rhythm: 1.5rem;
     --text-color: #105a4e;
     --text-hover: #578b83;
-    --lighter-text-color: rgb(16, 90, 78, .8);
-
-    --nav-background-hover: rgba(16, 90, 78, .3);
-    --nav-text-hover: white;
-
-    --menu-text-color: #e7d2cb;
-    --menu-background-color: rgb(16, 90, 78);
-
-    --project-text-color: #354542;
-
-    --background-image: url("../images/light-mode.JPEG"); 
-    --acorn-font: 'Acorn', sans-serif;
-    --montserrat-font: 'Montserrat', sans-serif;
-
-    --rhythm: 1.5rem;
-    --nav-height: 48px;
 }
   
-/* .dark-mode {
-    --text-color: #e7d2cb;
-    --nav-background-hover: rgba(231, 210, 203, 0.3);
-    --nav-text-hover: #105a4e;
-    --text-hover: #283735;
-    --slider-color: #283735;
-    --background-image: url(../images/dark-mode.JPEG); 
-} */
-
 * {
-    color: var(--text-color);
+    color: var(--lighter-text-color);
     font-family: var(--montserrat-font);
     list-style: none;
     text-decoration: none;
 }
 
 body {
-  background-attachment: fixed; 
-  background-image: var(--background-image);
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover; 
-  box-sizing: border-box;
+    background-attachment: fixed; 
+    background-image: var(--background-image);
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    box-sizing: border-box;
 }
 
-header {
-    background: var(--nav-background-hover);
-    height: var(--nav-height);
-    width: 100%;
-  
-    position: fixed;
-    left: 0;
-    top: 0;
-  
-    label {
-      cursor: pointer;
-      height: 20px;
-      position: absolute;
-      right: 1rem;
-      top: 1rem;
-      width: 26px;
-      z-index: 1001;
-  
-      span {
-        background-color: var(--text-color);
-        border-radius: 2px;
-        color: var(--menu-text-color);
-        display: block;
-        height: 3px;
-        position: absolute;
-        width: 100%;
-  
-        transform-origin: left;
-  
-        &:nth-child(1) {
-          top: 0;
-        }
-  
-        &:nth-child(2) {
-          top: 8px;
-        }
-  
-        &:nth-child(3) {
-          top: 16px;
-        }
-      }
-    }
-}
-  
-  nav {
-    background: var(--menu-background-color);
-    height: 100vh;
-    margin-block-start: var(--nav-height);
-    width: 300px;
-  
-    position: fixed;
-    right: -300px;
-    top: 0;
-    z-index: 1000;
-  
-    ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-  
-      li {
-        padding: 0;
-  
-        a {
-        background: var(--menu-background-color);
-          color: var(--menu-text-color);
-          display: block;
-          font-family: var(--acorn-font);
-          font-size: 1.25rem;
-          padding-block: 1rem;
-          padding-inline: 1rem;
-          text-decoration: none;
-          transition: 0.3s ease;
-  
-          &:hover {
-            background-color: var(--menu-text-color);
-            color: var(--menu-background-color);
-          }
-        }
-      }
-    }
-  }
-  
-p a {
-  font-weight: bold;
-}
-
-p a:hover {
-  color: var(--text-hover);
+footer {
+    text-align: center;
 }
 
 h1 {
@@ -160,6 +61,30 @@ h1 {
     text-align: center;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    color: var(--text-color);
+}
+
+header {
+    background: var(--nav-background-hover);
+    height: var(--nav-height);
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+nav {
+    background: var(--menu-background-color);
+    height: 100vh;
+    margin-block-start: var(--nav-height);
+    position: fixed;
+    right: -300px;
+    top: 0;
+    width: 300px;
+    z-index: 1000;
+}
+
 p {
     color: var(--lighter-text-color);
     font-size: .875rem;
@@ -167,8 +92,81 @@ p {
     text-align: center;
 }
 
-footer {
-    text-align: center;
+strong, b {
+    color: var(--text-hover);
+}
+
+.above-text {
+    color: var(--project-text-color);
+    font-size: 1.125rem;
+    margin: 0;
+}
+
+.box-title {
+    color: var(--project-text-color);
+    font-family: var(--acorn-font);
+    font-size: 1.875rem;
+    text-align: left;
+}
+
+.dark-mode {
+    --background-image: url("../images/dark-mode.JPEG"); 
+    --lighter-text-color: rgba(231, 210, 203, 0.9);
+    --menu-background-color: #e7d2cb;
+    --menu-text-color: #105a4e;
+    --nav-background-hover: rgba(231, 210, 203, 0.3);
+    --nav-text-hover: #105a4e;
+    --project-text-color: #2c2c2c;
+    --slider-color: #283735;
+    --text-color: rgba(231, 210, 203, 0.9);
+    --text-hover: #283735;
+}
+
+.footer-hidden-text {
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+.home {
+    display: none;  
+}
+
+.link-box {
+    border-radius: 35px;
+    padding-left: 30px;
+    padding-top: 20px;
+    transition: transform 0.2s ease;
+    width: 300px; 
+}
+
+.link-boxes {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px; 
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.slider {
+    background-color: #a8b6b4;
+    border-radius: 34px;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: 0.4s;
+}
+
+.theme-switch {
+    display: none;
 }
 
 footer h1 {
@@ -185,188 +183,259 @@ footer a i {
 
 footer a i:hover {
     color: var(--text-hover);
-    transform: scale(1.45);
+    transform: scale(1.15);
 }
 
-.home {
-  display: none;  
+header label {
+    cursor: pointer;
+    height: 20px;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    width: 26px;
+    z-index: 1001;
 }
 
-.footer-hidden-text {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
+header label span {
+    background-color: var(--text-color);
+    border-radius: 2px;
+    color: var(--menu-text-color);
+    display: block;
+    height: 3px;
+    position: absolute;
+    transform-origin: left;
+    width: 100%;
 }
 
-.link-boxes {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px; 
-  justify-content: center;
-  margin-top: 30px;
+input:checked + .slider {
+    background-color: var(--slider-color, #283735);
 }
 
-.link-box {
-  border-radius: 35px;
-  padding-top: 20px;
-  padding-left: 30px;
-  transition: transform 0.2s ease;
-  width: 300px; 
-}
-
-.above-text {
-  color: var(--project-text-color);
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.box-title {
-  color: var(--project-text-color);
-  font-family: var(--acorn-font);
-  font-size: 1.875rem;
-  text-align: left;
+input:checked + .slider:before {
+    background-image: url("../images/moon.png");
+    transform: translateX(36px);
 }
 
 .link-box:first-of-type {
-  background-color: #f3a1ad;
+    background-color: #f3a1ad;
 }
 
 .link-box:nth-of-type(2) {
-  background-color: #a3dcd5;
+    background-color: #a3dcd5;
 }
 
 .link-box:nth-of-type(3) { 
-  background-color: #C78476;
+    background-color: #C78476;
 }
 
 .link-box:nth-of-type(4) { 
-  background-color: #F0C159;
+    background-color: #F0C159;
 }
 
-  /* Show nav when checkbox is checked */
-  .nav-toggle:checked ~ nav {
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    padding: 0;
+}
+
+nav ul li a {
+    background: var(--menu-background-color);
+    color: var(--menu-text-color);
+    display: block;
+    font-family: var(--acorn-font);
+    font-size: 1.25rem;
+    padding-block: 1rem;
+    padding-inline: 1rem;
+    text-decoration: none;
+    transition: 0.3s ease;
+}
+
+nav ul li a:hover {
+    background-color: var(--menu-text-color);
+    color: var(--menu-background-color);
+}
+
+.nav-toggle:checked ~ nav {
     right: 0;
-  }
-  
-  .nav-toggle:checked ~ .nav-toggle-label span:nth-child(1) {
+}
+
+.nav-toggle:checked ~ .nav-toggle-label span:nth-child(1) {
+    top: -2px;
     transform: rotate(45deg);
-    top: -2px; /* Fix */
-  }
-  
-  .nav-toggle:checked ~ .nav-toggle-label span:nth-child(2) {
+}
+
+.nav-toggle:checked ~ .nav-toggle-label span:nth-child(2) {
     opacity: 0;
-  }
-  
-  .nav-toggle:checked ~ .nav-toggle-label span:nth-child(3) {
+}
+
+.nav-toggle:checked ~ .nav-toggle-label span:nth-child(3) {
     transform: rotate(-45deg);
-  }
+}
+
+p a {
+    color: var(--text-hover);
+    font-weight: bold;
+}
+
+p a:hover {
+    color: var(--text-hover);
+}
+
+.slider:before {
+    background-image: url("../images/sun.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    bottom: 4px;
+    content: "";
+    height: 36px;
+    left: 4px;
+    position: absolute;
+    transition: 0.4s;
+    width: 36px;
+}
+
+.theme-switch input {
+    height: 0;
+    opacity: 0;
+    width: 0;
+}
+
+header label span:nth-child(1) {
+    top: 0;
+}
+
+header label span:nth-child(2) {
+    top: 8px;
+}
+
+header label span:nth-child(3) {
+    top: 16px;
+}
 
 @media screen and (min-width: 650px) {
-  h1 {
-    font-size: 3.75rem;
-    padding-top: 100px;
-  }
+    h1 {
+        font-size: 3.75rem;
+        padding-top: 100px;
+    }
 
-  p {
-    font-size: 1.125rem;
-  }
+    p {
+        font-size: 1.125rem;
+    }
 
-  footer h1 {
-    font-size: 2.75rem;
-  }
+    footer h1 {
+        font-size: 2.75rem;
+    }
 
-  footer a i {
-    font-size: 2rem;
-  }
+    footer a i {
+        font-size: 2rem;
+    }
 }
 
+@media screen and (max-width: 1023px) {
+    .theme-switch {
+        display: inline-block;
+        height: 44px;
+        position: absolute;
+        right: 1rem;
+        top: 8px;
+        width: 80px;
+        z-index: 1002;
+    }
+}
 
 @media screen and (min-width: 1024px) {
-  .nav-toggle-label, label, input, nav ul li:first-child {
-    display: none;
-  }
-
-  h1 {
-    padding-top: 5rem;
-  }
-
-  .home {
-    background-color: transparent;
-    display: flex;
-    font-family: var(--acorn-font);
-    font-size: 1.5rem;
-    grid-column: 1/2;
-    height: 50px;
-    justify-content: left;
-    margin: 35px 35px 15px 0;
-    text-align: center;
-    transition: 0.2s ease;
-    
-    &:hover {
-      color: var(--text-hover);
-      transform: scale(1.05);
+    h1 {
+        padding-top: 5rem;
     }
-  }
 
-  header {
-    background: none;
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    padding: 0 2rem;
-    position: static;
-  } 
+    header {
+        align-items: center;
+        background: none;
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        padding: 0 2rem;
+        position: static;
+    } 
 
-  nav {
-    background: none;
-    display: flex;
-    height: 50px;
-    justify-content: center;
-    margin: 30px;
-    position: static;
-    width: auto;
-
-    ul {
-      display: flex;
-      gap: 1rem;
-
-      li {
-        a {
-          background-color: transparent;
-          border-radius: 50px;
-          color: var(--text-color);
-          display: block;
-          font-family: var(--montserrat-font);
-          font-size: 1rem;
-          padding: 10px 25px;
-          transition: 0.2s ease;
-
-          &:hover {
-            background-color: var(--nav-background-hover);
-            color: var(--nav-text-hover);
-          }
-        }
-      }
+    nav {
+        background: none;
+        display: flex;
+        grid-column: 2;
+        height: 50px;
+        justify-content: center;
+        margin: 30px;
+        position: static;
+        width: auto;
     }
-  }
 
-  .link-boxes {  
-    animation: fadeInUp 0.5s forwards;
-    opacity: 1;
-    transform: translateY(-50px);
-    transition:
-      transform 0.5s ease, 
-      opacity 0.3s ease;
-  }
+    .home {
+        background-color: transparent;
+        display: flex;
+        font-family: var(--acorn-font);
+        font-size: 1.5rem;
+        grid-column: 1/2;
+        height: 50px;
+        justify-content: left;
+        margin: 35px 35px 15px 0;
+        text-align: center;
+        transition: 0.2s ease;
+    }
+
+    .link-boxes {  
+        animation: fadeInUp 0.5s forwards;
+        opacity: 1;
+        transform: translateY(-50px);
+        transition: transform 0.5s ease, opacity 0.3s ease;
+    }
+
+    .nav-toggle-label, label, input, nav ul li:first-child {
+        display: none;
+    }
+
+    .theme-switch {
+        display: inline-block;
+        grid-column: 3;
+        height: 44px;
+        justify-self: end;
+        margin: 35px 0 15px 35px;
+        width: 80px;
+    }
+
+    .home:hover {
+        color: var(--text-hover);
+        transform: scale(1.05);
+    }
+
+    nav ul {
+        display: flex;
+        gap: 1rem;
+    }
+
+    nav ul li a {
+        background-color: transparent;
+        border-radius: 50px;
+        color: var(--text-color);
+        display: block;
+        font-family: var(--montserrat-font);
+        font-size: 1rem;
+        padding: 10px 25px;
+        transition: 0.2s ease;
+    }
+
+    nav ul li a:hover {
+        background-color: var(--nav-background-hover);
+        color: var(--nav-text-hover);
+    }
 }
 
 @media screen and (min-width: 1280px) {
-  h1 {
-    font-size: 6.875rem;
-    padding-top: 6rem;
-  }
-} 
+    h1 {
+        font-size: 6.875rem;
+        padding-top: 6rem;
+    }
+}
