--- a/styles/resume.css
+++ b/styles/resume.css
@@ -1,7 +1,4 @@
-p {
-    padding: 0 0.9375rem;
-}
-
+/* Base Elements */
 h2 {
     padding-top: 2.5rem;
 }
@@ -15,19 +12,46 @@ h2, h3, h4, h5, h6 {
     padding-left: 0.9375rem;
 }
 
+p {
+    padding: 0 0.9375rem;
+}
+
+/* Combinators */
+h2 + ul {
+    margin: 0;
+    padding-left: 0;
+}
+
+h2 + ul li {
+    font-weight: bold;
+    margin-top: .35rem;
+    padding-left: 1rem;
+}
+
+p + ul li {
+    line-height: 1.5rem;
+    margin: 1rem 0;
+}
+
+/* Classes */
 .parent {
+    animation: fadeInUp 1s ease-out 0.3s both;
     margin: 0 auto;
 }
 
-.position {
-    margin: 3rem 0 0 0;
+.parent li {
+    color: var(--lighter-text-color);
+    font-weight: 500;
+    margin-bottom: .35rem;
 }
 
-.position:first-of-type {
-    margin-top: .25rem;
+.parent ul {
+    margin-top: .5rem;
+    padding-left: var(--rhythm * 1.35);
+    padding-right: var(--rhythm);
 }
 
-.position, .place {
+.place {
     color: var(--text-color);
     font-size: 1rem;
     font-weight: bold;
@@ -35,18 +59,55 @@ h2, h3, h4, h5, h6 {
     text-align: left;
 }
 
-.place {
-    margin-top: 3rem;
+.place a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+
+.place a:hover {
+    color: var(--text-hover);
+}
+
+.place span {
+    font-size: 0.95rem;
+    font-style: italic;
+    font-weight: 500;
 }
 
 .place:first-of-type {
     margin-top: .25rem;
 }
 
+.position {
+    color: var(--text-color);
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 3rem 0 0 0;
+    text-align: left;
+}
+
+.position:first-of-type {
+    margin-top: .25rem;
+}
+
+.project {
+    margin-top: 3rem;
+}
+
+.project:first-of-type {
+    margin-top: .25rem;
+}
+
 .section {
+    animation: fadeInUp 0.8s ease-out both;
     font-size: 2rem;
     padding: 2rem 0 0 0;
     text-align: center;
+}
+
+.section:nth-of-type(2) {
+    padding: 3.5rem 0 2rem 0;
 }
 
 .time {
@@ -66,72 +127,10 @@ h2, h3, h4, h5, h6 {
     text-align: left;
 }
 
-.job-header, .project-header {
-    align-items: baseline;
-    display: flex;
-    gap: 0.5rem;
-    margin: 2rem 0 0.5rem 0;
-    padding: 0 0.9375rem;
-}
-
-.job-header em {
-    font-style: italic;
-    font-weight: normal;
-}
-
-.job-header strong, .project-header strong {
-    color: var(--text-color);
-    font-weight: bold;
-}
-
-.job-header .time, .project-header .time {
-    font-style: normal;
-    font-weight: normal;
-    margin-left: auto;
-}
-
-.project-header .tools {
-    font-size: 0.9em;
-    font-style: italic;
-    font-weight: normal;
-}
-
-.place span {
-    font-size: 0.95rem;
-    font-weight: 500;
-    font-style: italic;
-}
-
-h2 + ul {
-    margin: 0;
-    padding-left: 0;
-}
-
-p + ul li {
-    line-height: 1.5rem;
-    margin: 1rem 0;
-}
-
-h2 + ul li {
-    font-weight: bold;
-    margin-top: .35rem;
-    padding-left: 1rem;
-}
-
-.parent ul {
-    margin-top: .5rem;
-    padding-left: var(--rhythm * 1.35);
-    padding-right: var(--rhythm);
-}
-
-.parent li {
-    color: var(--lighter-text-color);
-    font-weight: 500;
-    margin-bottom: .35rem;
-}
-
-.section:nth-of-type(2) {
-    padding: 3.5rem 0 2rem 0;
+@media screen and (max-width: 829px) {
+    .parent {
+        padding: 0 1rem;
+    }
 }
 
 @media screen and (min-width: 650px) {
@@ -143,9 +142,21 @@ h2 + ul li {
 @media screen and (min-width: 830px) {
     .parent {
         display: grid;
-        gap: 1.5rem;
+        gap: 2rem;
         grid-template-columns: 35% 65%;
-        justify-items: center;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 2rem;
+    }
+
+    .education {
+        align-self: start;
+        animation: fadeInUp 1s ease-out 0.5s both;
+    }
+
+    .experience {
+        align-self: start;
+        animation: fadeInUp 1s ease-out 0.7s both;
     }
 
     h2, h3, h4, h5, h6 {
@@ -172,24 +183,20 @@ h2 + ul li {
         font-size: 1.25rem;
     }
 
-    .time, .time-exp, .time-proj {
-        font-size: 1rem;
-    }
-
     .section {
         font-size: 2.5rem;
-    }
-    
-    .experience li {
-        line-height: 1.875rem;
-    }
-
-    .job-header, .project-header {
-        font-size: 1.25rem;
     }
 
     .section:nth-of-type(2) {
         padding: 4.5rem 0 1rem 0;
+    }
+
+    .time, .time-exp, .time-proj {
+        font-size: 1rem;
+    }
+
+    .experience li {
+        line-height: 1.875rem;
     }
 }
 
