--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,7 +1,9 @@
+/* Base Elements */
 p {
     padding: 0 12rem;
 }
 
+/* Classes */
 .container {
     margin: 0 auto;
     max-width: 1540px;
@@ -11,34 +13,39 @@ p {
     transform: scale(1.05);
 }
 
-.link-box:first-of-type img {
-    margin-left: 40px;
-    margin-top: 20px; 
-}
-
-.link-box:nth-of-type(2) img, .link-box:nth-of-type(3) img, .link-box:nth-of-type(4) img {
-    border-radius: 15px 15px 0 0;
-    margin-left: 0.8125rem;
-    margin-top: 2rem; 
-}
-
 .link-box:first-of-type {
-    align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-}
-
-.link-box:first-of-type .terminal-preview-small {
-    align-self: center;
-    border-radius: 15px 15px 0 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-top: auto;
+    justify-content: flex-start;
+    overflow: hidden;
+    padding-bottom: 0;
 }
 
 .link-box:first-of-type .above-text {
     font-size: 1.1rem;
+    text-align: left;
+}
+
+.link-box:first-of-type img {
+    border-radius: 15px 15px 0 0;
+    display: block;
+    margin-left: 10px;
+    width: 85%;
+}
+
+.link-box:first-of-type picture {
+    display: block;
+    line-height: 0;
+    margin-bottom: 0;
+    margin-top: auto;
+    padding-top: 1.5rem;
+}
+
+.link-box:nth-of-type(2) img, .link-box:nth-of-type(3) img, .link-box:nth-of-type(4) img {
+    border-radius: 15px 15px 0 0;
+    display: block;
+    margin-left: 0.8125rem;
+    margin-top: 2rem;
 } 
 
 @media screen and (min-width: 690px) {
@@ -72,12 +79,16 @@ p {
         width: 550px;
     }
 
-    .link-box:first-of-type img, .link-box:nth-of-type(2) img, .link-box:nth-of-type(3) img, .link-box:nth-of-type(4) img {
+    .link-box:nth-of-type(2) img, .link-box:nth-of-type(3) img, .link-box:nth-of-type(4) img {
         margin-top: 3rem; 
     }
 
-    .link-box:nth-of-type(2) img, .link-box:nth-of-type(3) img {
+    .link-box:nth-of-type(2) img{
         margin-left: 2rem;
+    } 
+
+    .link-box:nth-of-type(3) img{
+        margin-left: 4.5rem;
     } 
 
     .link-box:nth-of-type(4) img {
@@ -86,17 +97,14 @@ p {
 }
 
 @media screen and (min-width: 760px) {
-    .link-box:first-of-type img {
-        margin-left: .8rem;
-        margin-top: 55px;
-    }
+
 
     .link-box:nth-of-type(2) img {
         margin-left: 0;
     }
 
     .link-box:nth-of-type(3) img {
-        margin-left: 3rem;
+        margin-left: 5rem;
     }
 }
 
@@ -129,14 +137,15 @@ p {
         width: 800px;
     }
 
-    .link-box:first-of-type img {
-        margin-left: 2rem;
-        margin-top: 2rem; 
-    }
+
 
     .link-box:nth-of-type(2) img {
         margin-left: .5rem; 
         margin-top: 2rem; 
+    }
+
+    .link-box:nth-of-type(3) img {
+        margin-left: 6rem; 
     }
 
     .link-box:nth-of-type(4) img {
@@ -165,8 +174,10 @@ p {
         width: 950px;
     }
 
+
+
     .link-box:first-of-type img {
-        margin-left: 3rem;
+        margin-left: 15px;
     }
 
     .link-box:nth-of-type(2) img {
@@ -188,107 +199,3 @@ p {
     }
 }
 
-/* Terminal Preview Styles for Projects Page */
-.terminal-preview-small {
-    background-color: #1e1e1e;
-    border-radius: 8px;
-    font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
-    margin-left: 0.8125rem;
-    margin-top: 2rem;
-    overflow: hidden;
-}
-
-.terminal-header-small {
-    align-items: center;
-    background-color: #2d2d2d;
-    display: flex;
-    padding: 6px 12px;
-    position: relative;
-}
-
-.terminal-buttons-small {
-    display: flex;
-    gap: 4px;
-}
-
-.terminal-button-small {
-    border-radius: 50%;
-    height: 8px;
-    width: 8px;
-}
-
-.terminal-button-small.red {
-    background-color: #ff5f56;
-}
-
-.terminal-button-small.yellow {
-    background-color: #ffbd2e;
-}
-
-.terminal-button-small.green {
-    background-color: #27ca3f;
-}
-
-.terminal-title-small {
-    color: #ffffff;
-    font-size: 0.7rem;
-    left: 50%;
-    position: absolute;
-    transform: translateX(-50%);
-}
-
-.terminal-content-small {
-    background-color: #1e1e1e;
-    color: #ffffff;
-    font-size: 0.7rem;
-    line-height: 1.3;
-    padding: 12px;
-}
-
-.terminal-line-small {
-    margin-bottom: 2px;
-}
-
-.terminal-line-small strong {
-    color: #ffffff;
-    font-weight: bold;
-}
-
-@media screen and (min-width: 690px) {
-    .terminal-content-small {
-        font-size: 0.8rem;
-        padding: 16px;
-    }
-    
-    .terminal-title-small {
-        font-size: 0.8rem;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .link-box:first-of-type .terminal-preview-small {
-        margin-left: 0;
-    }
-    
-    .terminal-preview-small {
-        margin-left: 0.5rem;
-    }
-    
-    .terminal-content-small {
-        font-size: 0.9rem;
-    }
-    
-    .terminal-title-small {
-        font-size: 0.9rem;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .link-box:first-of-type .terminal-preview-small {
-        margin-left: 0;
-    }
-    
-    .terminal-preview-small {
-        margin-left: 2rem;
-    }
-}
